# ts_deplint

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: build.yml  pull_request_test.yml  release.yml
npm/: package.json.tmpl
npm/ts_deplint/: .gitignore  package.json
npm/ts_deplint/src/: index.js  index.ts
src/: diagram.rs  disallowed.rs  files.rs  fix.rs  format.rs  imports.rs  initial.rs  lib.rs  list_files_and_directories.rs  main.rs  parse_rules_file.rs  root.rs  rules.rs  ts_import_extractor.rs  ts_reader.rs  violations.rs  visit.rs  visit_directory.rs
tests/: ts_reader_test.rs
tests/fixtures/: sample.ts
