[package]
name = "ts_deplint"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/maxh/ts_deplint"
description = "A tool to lint dependencies within TypeScript projects"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
